--- a/app/src/main/res/layout/dialog_trash.xml
+++ b/app/src/main/res/layout/dialog_trash.xml
@@ -2,20 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dp"
+    android:layout_width="300dp"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_trash_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
-        android:includeFontPadding="false"
-        android:text="대진고등학교 버스정류장 앞"
-        android:gravity="center"
-        android:textSize="18sp"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:gravity="center"
+        android:includeFontPadding="false"
         android:paddingHorizontal="40dp"
+        android:text="쓰레기통 위치"
+        android:textSize="16sp"
+        android:maxLines="2"
+        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,43 +26,32 @@
         android:id="@+id/tv_trash_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_kr_medium"
-        android:includeFontPadding="false"
-        android:text="일반 쓰레기, 재활용 쓰레기 "
-        android:textSize="14sp"
-        android:gravity="center"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/noto_sans_kr_medium"
+        android:gravity="center"
+        android:includeFontPadding="false"
         android:paddingHorizontal="40dp"
+        android:text="쓰레기통 설명"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_trash_title" />
 
-    <ImageView
-        android:id="@+id/iv_trash_image"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/img_temp_insta"
-        app:layout_constraintBottom_toTopOf="@id/btn_trash_ok"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_trash_description" />
-
     <!-- 네 버튼 -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_trash_ok"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginVertical="30dp"
         android:background="@drawable/bg_square_sub_color_30"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:stateListAnimator="@null"
         android:text="확인"
         android:textColor="@color/white"
-        android:textSize="14sp"
-        android:layout_marginVertical="30dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_trash_image" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_trash_description" />
 </androidx.constraintlayout.widget.ConstraintLayout>
